--- a/demo.html
+++ b/demo.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gridrunner</title>
+    <script type="module" src="https://unpkg.com/lucide@latest"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Demo</title>
 </head>
 <body>
     <header id="initial-header" class="initial-header">
-        <div class="container">
-            <a href="index.html" class="logo">GRIDRUNNER</a>
+        <div class="container_head">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+              </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
                 <a href="products.html" class="nav-link">PRODUCTS</a>
@@ -18,6 +21,7 @@
             </nav>
         </div>
     </header>
+
     <div class="demo-container">
     <!-- Left Panel: Product Information -->
     <div class="left-panel">
