--- a/partners.html
+++ b/partners.html
@@ -1,21 +1,26 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gridrunner</title>
+    <script type="module" src="https://unpkg.com/lucide@latest"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header id="initial-header" class="initial-header">
-        <div class="container">
-            <a href="index.html" class="logo">GRIDRUNNER</a>
+        <div class="container_head">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+              </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
                 <a href="products.html" class="nav-link">PRODUCTS</a>
                 <a href="partners.html" class="nav-link">PARTNERS</a>
                 <a href="company.html" class="nav-link">COMPANY</a>
             </nav>
-            <a class="btn btn-secondary" href="demo.html">GET DEMO</a>
+            <a class="btn btn-demo" href="demo.html">GET DEMO</a>
         </div>
     </header>
 <section id="partners">
@@ -131,22 +136,27 @@
         <button class="apply-button">Apply now</button>
     </div>
     </section>
+    
     <footer>
-            <div class="footerContainer">
-                <div class="footerItem">
-                    <a href="terms-and-privacy.html#privacy-policy">Privacy Policy</a>
-                    <a href="terms-and-privacy.html#terms-conditions">Terms and Conditions</a>
-                    <a href="contact-us.html">Contact us</a>
-                </div>
-                <div class="footerItem">
-                    <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
-                    <a href="#">Discord <img src="images/discord.svg" width="10px"/></a>
-                    <a href="#">YouTube <img src="images/youtube.svg" width="10px"/></a>
-            </div></div>
-            <div class="copyright">
-                Copyright © 2024 Gridrunner. All Rights Reserved
-            </div> 
-        </footer>
+        <div class="container_head">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+              </a>
+            <div class="footer-links">
+                <a href="privacy-and-terms.html" class="nav-link">Privacy</a>
+                <a href="privacy-and-terms.html" class="nav-link">Cookies</a>
+                <a href="privacy-and-terms.html" class="nav-link">Contact us</a>
+            </div>
+            <div class="social-icons">
+                <a href="#"><i data-lucide="instagram"></i></a>
+                <a href="#"><i data-lucide="twitter"></i></a>
+                <a href="#"><i data-lucide="linkedin"></i></a>
+            </div>
+        </div>
+        <div class="copyright">
+            Copyright © 2024 Gridrunner. All Rights Reserved
+        </div>
+    </footer>
 </div>
 <script src="script.js"></script>
     </section>
