--- a/privacy-and-terms.html
+++ b/privacy-and-terms.html
@@ -7,30 +7,43 @@
     <title>Privacy Policy & Terms and Conditions</title>
 </head>
 <body>
-
     <!-- Sidebar Section -->
     <div class="sidebar">
-        <h2>Table of Contents</h2>
-        <a href="#privacy-policy">Privacy Policy</a>
+        <h2><u> Table of Contents </u></h2>
+        <a href="#privacy-policy"><b> Privacy Policy</b></a>
+        <a href="#info-collection">Information We Collect</a>
+        <a href="#info-use">How We Use Your Information</a>
+        <a href="#data-security">Data Security</a>
+        <a href="#your-rights">Your Rights and Choices</a>
+        <a href="#changes-privacy-policy">Changes to This Privacy Policy</a>
         <a href="#terms-conditions">Terms and Conditions</a>
-        <a href="#contact-us">Contact Us</a>
+        <a href="#use-services">Use of Our Services</a>
+        <a href="#account-registration">Account Registration</a>
+        <a href="#prohibited-activities">Prohibited Activities</a>
+        <a href="#limitation-liability">Limitation of Liability</a>
+        <a href="#termination">Termination</a>
+        <a href="#governing-law">Governing Law</a>
+        <a href="#changes-terms">Changes to Terms</a>
     </div>
-    <main>
-        <header class="main-header">
-            <nav>
-                <a href="index.html" class="logo"><b> GRIDRUNNER</b></a>
-                <a href="platform.html" class="nav-link">Platform</a>
-                <a href="products.html" class="nav-link">Products</a>
-                <a href="partners.html" class="nav-link">Partners</a>
-                <a href="company.html" class="nav-link">Company</a>
-                <button class="btn btn-secondary">GET DEMO</button>
-            </nav>
-    </header>
+                <header id="initial-header" class="initial-header">
+                    <div class="container_head">
+                        <a href="index.html" class="logo">
+                            <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                          </a>
+                        <nav>
+                            <a href="platform.html" class="nav-link">PLATFORM</a>
+                            <a href="products.html" class="nav-link">PRODUCTS</a>
+                            <a href="partners.html" class="nav-link">PARTNERS</a>
+                            <a href="company.html" class="nav-link">COMPANY</a>
+                        </nav>
+                        <a class="btn btn-demo" href="demo.html">GET DEMO</a>
+                    </div>
+                </header>
         <section id="privacy-policy">
             <h2>Privacy Policy</h2>
             <p>Effective Date: January 1, 2024</p>
 
-            <p>At CyberSecure Inc., we value the privacy and security of our customers. This Privacy Policy explains how we collect, use, and protect your personal information when you use our products and services. By using our services, you consent to the practices described in this policy.</p>
+            <p>At Gridrunner, we value the privacy and security of our customers. This Privacy Policy explains how we collect, use, and protect your personal information when you use our products and services. By using our services, you consent to the practices described in this policy.</p>
 
             <h3 id="info-collection">1. Information We Collect</h3>
             <p>We collect various types of information to provide and improve our services, including:</p>
@@ -65,7 +78,7 @@
                 <li><strong>Data Portability:</strong> You can request a copy of your data in a machine-readable format.</li>
             </ul>
 
-            <h3>5. Changes to This Privacy Policy</h3>
+            <h3 id="changes-privacy-policy">5. Changes to This Privacy Policy</h3>
             <p>We may update this Privacy Policy periodically. Any updates will be posted on this page, and we will notify you of significant changes by email or through our website.</p>
         </section>
 
@@ -74,10 +87,10 @@
             <h2>Terms and Conditions</h2>
             <p>Effective Date: January 1, 2024</p>
 
-            <p>These Terms and Conditions ("Terms") govern your use of the website, products, and services provided by CyberSecure Inc. By accessing or using our services, you agree to these Terms. If you do not agree with any part of these Terms, do not use our services.</p>
+            <p>These Terms and Conditions ("Terms") govern your use of the website, products, and services provided by Gridrunner By accessing or using our services, you agree to these Terms. If you do not agree with any part of these Terms, do not use our services.</p>
 
             <h3 id="use-services">1. Use of Our Services</h3>
-            <p>CyberSecure Inc. provides cybersecurity services for individuals and businesses. You agree to use our services only for lawful purposes and in accordance with these Terms. You must be at least 18 years old to use our services.</p>
+            <p>Gridrunner provides cybersecurity services for individuals and businesses. You agree to use our services only for lawful purposes and in accordance with these Terms. You must be at least 18 years old to use our services.</p>
 
             <h3 id="account-registration">2. Account Registration</h3>
             <p>In order to access certain features of our services, you must create an account. During registration, you agree to provide accurate and complete information. You are responsible for maintaining the confidentiality of your login credentials.</p>
@@ -93,18 +106,23 @@
             </ul>
 
             <h3 id="limitation-liability">4. Limitation of Liability</h3>
-            <p>CyberSecure Inc. will not be held liable for any indirect, incidental, or consequential damages arising from your use of our services. Our liability is limited to the maximum extent permitted by law.</p>
+            <p>Gridrunner will not be held liable for any indirect, incidental, or consequential damages arising from your use of our services. Our liability is limited to the maximum extent permitted by law.</p>
 
             <h3 id="termination">5. Termination</h3>
             <p>We reserve the right to suspend or terminate your account if we determine you have violated these Terms. You may terminate your account by contacting customer support.</p>
 
             <h3 id="governing-law">6. Governing Law</h3>
-            <p>These Terms are governed by the laws of the jurisdiction in which CyberSecure Inc. is incorporated. Any disputes arising from these Terms will be resolved in the competent courts of that jurisdiction.</p>
+            <p>These Terms are governed by the laws of the jurisdiction in which Gridrunner is incorporated. Any disputes arising from these Terms will be resolved in the competent courts of that jurisdiction.</p>
 
-            <h3>7. Changes to Terms</h3>
+            <h3 id="changes-terms">7. Changes to Terms</h3>
             <p>We may modify these Terms at any time. Significant changes will be communicated to you via email or posted on our website. Continued use of our services after changes constitutes your acceptance of the updated Terms.</p>
         </section>
     </main>
 
+    <footer>
+        <div class="copyright">
+            Copyright © 2024 Gridrunner. All Rights Reserved
+        </div> 
+    </footer>
 </body>
 </html>
