--- a/contact-us.html
+++ b/contact-us.html
@@ -9,14 +9,16 @@
 <body>
     <header id="initial-header" class="initial-header">
         <div class="container">
-            <a href="index.html" class="logo">GRIDRUNNER</a>
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+              </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
                 <a href="products.html" class="nav-link">PRODUCTS</a>
                 <a href="partners.html" class="nav-link">PARTNERS</a>
                 <a href="company.html" class="nav-link">COMPANY</a>
             </nav>
-        <a class="btn btn-secondary" href="demo.html">GET DEMO</a>
+            <a class="btn btn-demo" href="demo.html">GET DEMO</a>
         </div>
     </header>
     <section class="contact-us">
@@ -86,20 +88,24 @@
     </section>
 
     <footer>
-        <div class="footerContainer">
-            <div class="footerItem">
-                <a href="terms-and-privacy.html#privacy-policy">Privacy Policy</a>
-                <a href="terms-and-privacy.html#terms-conditions">Terms and Conditions</a>
-                <a href="contact-us.html">Contact us</a>
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+              </a>
+            <div class="footer-links">
+                <a href="privacy-and-terms.html">Privacy</a>
+                <a href="privacy-and-terms.html">Cookies</a>
+                <a href="privacy-and-terms.html">Contact us</a>
             </div>
-            <div class="footerItem">
-                <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
-                <a href="#">Discord <img src="images/discord.svg" width="10px"/></a>
-                <a href="#">YouTube <img src="images/youtube.svg" width="10px"/></a>
-        </div></div>
+            <div class="social-icons">
+                <a href="#"><i data-lucide="instagram"></i></a>
+                <a href="#"><i data-lucide="twitter"></i></a>
+                <a href="#"><i data-lucide="linkedin"></i></a>
+            </div>
+        </div>
         <div class="copyright">
             Copyright © 2024 Gridrunner. All Rights Reserved
-        </div> 
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
