--- a/partners.html
+++ b/partners.html
@@ -133,7 +133,7 @@
         <div>
         <h2>Ready to Become a partner?</h2>
         <p>Join a Network of Professionals willing to advance the cause of cybersecurity worldwide. Chat with industry experts and gain new insights with our advanced tools. Completely free of charge. </p>
-        <button class="apply-button">Apply now</button>
+        <button class="apply-button"> <a href="contact-us.html"> </a>Apply now </a> </button>
     </div>
     </section>
     
@@ -143,9 +143,9 @@
                 <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <div class="footer-links">
-                <a href="privacy-and-terms.html" class="nav-link">Privacy</a>
-                <a href="privacy-and-terms.html" class="nav-link">Cookies</a>
-                <a href="privacy-and-terms.html" class="nav-link">Contact us</a>
+                <a href="privacy-and-terms.html#privacy-policy" class="nav-link">Privacy Policy</a>
+                <a href="privacy-and-terms.html#terms-conditions" class="nav-link">Terms and conditions</a>
+                <a href="contact-us.html" class="nav-link">Contact us</a>
             </div>
             <div class="social-icons">
                 <a href="#"><i data-lucide="instagram"></i></a>
