--- a/products.html
+++ b/products.html
@@ -208,9 +208,9 @@
                 <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <div class="footer-links">
-                <a href="privacy-and-terms.html" class="nav-link">Privacy</a>
-                <a href="privacy-and-terms.html" class="nav-link">Cookies</a>
-                <a href="privacy-and-terms.html" class="nav-link">Contact us</a>
+                <a href="privacy-and-terms.html#privacy-policy" class="nav-link">Privacy Policy</a>
+                <a href="privacy-and-terms.html#terms-conditions" class="nav-link">Terms and Conditions</a>
+                <a href="contact-us.html" class="nav-link">Contact us</a>
             </div>
             <div class="social-icons">
                 <a href="#"><i data-lucide="instagram"></i></a>
