--- a/privacy-and-terms.html
+++ b/privacy-and-terms.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="terms-an-privacy.css">
     <title>Privacy Policy & Terms and Conditions</title>
 </head>
 <body>
+    <header id="initial-header" class="initial-header">
+        <div class="container_head">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+              </a>
+            <nav>
+                <a href="platform.html" class="nav-link">PLATFORM</a>
+                <a href="products.html" class="nav-link">PRODUCTS</a>
+                <a href="partners.html" class="nav-link">PARTNERS</a>
+                <a href="company.html" class="nav-link">COMPANY</a>
+            </nav>
+            <a class="btn btn-demo" href="demo.html">GET DEMO</a>
+        </div>
+    </header>
     <!-- Sidebar Section -->
     <div class="sidebar">
         <h2><u> Table of Contents </u></h2>
@@ -25,20 +39,7 @@
         <a href="#governing-law">Governing Law</a>
         <a href="#changes-terms">Changes to Terms</a>
     </div>
-                <header id="initial-header" class="initial-header">
-                    <div class="container_head">
-                        <a href="index.html" class="logo">
-                            <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
-                          </a>
-                        <nav>
-                            <a href="platform.html" class="nav-link">PLATFORM</a>
-                            <a href="products.html" class="nav-link">PRODUCTS</a>
-                            <a href="partners.html" class="nav-link">PARTNERS</a>
-                            <a href="company.html" class="nav-link">COMPANY</a>
-                        </nav>
-                        <a class="btn btn-demo" href="demo.html">GET DEMO</a>
-                    </div>
-                </header>
+    <main>
         <section id="privacy-policy">
             <h2>Privacy Policy</h2>
             <p>Effective Date: January 1, 2024</p>
@@ -117,12 +118,13 @@
             <h3 id="changes-terms">7. Changes to Terms</h3>
             <p>We may modify these Terms at any time. Significant changes will be communicated to you via email or posted on our website. Continued use of our services after changes constitutes your acceptance of the updated Terms.</p>
         </section>
+        <footer>
+            <div class="copyright">
+                Copyright © 2024 Gridrunner. All Rights Reserved
+            </div> 
+        </footer>
     </main>
 
-    <footer>
-        <div class="copyright">
-            Copyright © 2024 Gridrunner. All Rights Reserved
-        </div> 
-    </footer>
+    
 </body>
 </html>
