--- a/privacy-and-terms.html
+++ b/privacy-and-terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="terms-an-privacy.css">
+    <link rel="stylesheet" href="privacy-and-terms.css">
     <title>Privacy Policy & Terms and Conditions</title>
 </head>
 <body>
