--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gridrunner</title>
-    <script type="module" src="https://unpkg.com/lucide@latest"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="demo.css">
+    <title>Demo</title>
 </head>
 <body>
     <header id="initial-header" class="initial-header">
@@ -19,9 +18,9 @@
                 <a href="partners.html" class="nav-link">PARTNERS</a>
                 <a href="company.html" class="nav-link">COMPANY</a>
             </nav>
+            <a class="btn btn-demo" href="demo.html">GET DEMO</a>
         </div>
     </header>
-
     <div class="demo-container">
     <!-- Left Panel: Product Information -->
     <div class="left-panel">
